Put version behind a permission
